# Nine-Yards

./: .gitignore  Cargo.toml  LICENSE  README.md  api-client.sh  api_docs.md  config.toml  makefile  openapi.json  openapi.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
backend/: Cargo.toml  clean.sh  database.db  openapi.json  secret.key
backend/migrations/: 20230603155502_init.down.sql  20230603155502_init.up.sql  20230724134000_init.sql  initial.sql
backend/src/: constants.rs  error.rs  main.rs  openapi.rs  response.rs  state.rs
backend/src/api/: mod.rs
backend/src/api/docs/: mod.rs  rapidoc.rs  redoc.rs  schema.rs  swagger.rs
backend/src/api/v1/: mod.rs  projects.rs  sub_tasks.rs  task_groups.rs  tasks.rs  users.rs
backend/src/cli/: mod.rs
backend/src/database/: mod.rs  redis.rs  sql.rs  sqlite.rs
backend/src/database/models/: ids.rs  mod.rs  user_item.rs
backend/src/middleware/: auth.rs  auth_middleware.rs  extractors.rs  mod.rs  project.rs  project_auth.rs  user_auth.rs  user_authentication.rs
backend/src/models/: audit.rs  audits.rs  error.rs  id.rs  idea.rs  ids.rs  login_history.rs  mod.rs  notifications.rs  projects.rs  tasks.rs  teams.rs  tokens.rs  user_token.rs  users.rs
backend/src/routes/: mod.rs  project_routes.rs  sub_task_routes.rs  task_group_routes.rs  task_routes.rs  user_routes.rs
backend/src/utilities/: auth_utils.rs  mod.rs  token_utils.rs  validation_utils.rs
client/.openapi-generator/: FILES
client/apis/: V1Api.ts
client/models/: EditSubTask.ts  Login.ts  Notification.ts  NotificationAction.ts  ProjectMember.ts  SubTaskBuilder.ts  TaskGroup.ts  User.ts
legacy/backend/migrations/: 20230603155502_init.down.sql  20230603155502_init.up.sql
legacy/backend/src/config/: app.rs
legacy/backend/src/database/: mod.rs  sqlite.rs
legacy/backend/src/file_hosting/: extensions.rs  mod.rs
legacy/backend/src/middleware/: project.rs
legacy/backend/src/models/: audit.rs  ids.rs  mod.rs  projects.rs  user_token.rs  users.rs
legacy/backend/src/routes/: project_routes.rs  task_routes.rs
legacy/backend/src/utilities/: auth_utils.rs  token_utils.rs
nine-yards-api/: Cargo.toml
nine-yards-api/src/: main.rs
nine-yards-auth/: Cargo.toml
nine-yards-auth/src/: lib.rs
nine-yards-database/: Cargo.toml
nine-yards-doodle/: README.md  package.json  pathtest.html  pnpm-lock.yaml  tsconfig.json
nine-yards-models/: Cargo.toml
site/: .eslintrc.js  README.md  app.vue  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
site/api/: dark.ts
site/api/helpers/: dates.ts
site/components/icons/: email.vue  fern.vue  grid.vue  jumping.vue  list.vue  moon.vue  more.vue  password.vue  plus.vue  sleeping.vue  star.vue  sun.vue
site/components/ui/: theme.vue
site/components/ui/project/tasks/: count.vue  group.vue  task.vue
site/components/ui/project/update/: update.vue  updates.vue
site/layouts/: app.vue
site/pages/: signin.vue  signup.vue
site/pages/projects/[id]/: about.vue  board.vue  missing.vue
site/plugins/: slicksort.ts
site/src/: App.vue  main.ts
site/src/api/authentication/: User.ts
site/src/api/authentication/types/: AuthTypes.ts
site/src/api/draggable/: helpers.ts
site/src/api/helpers/: RequestHelpers.ts
site/src/components/account/: AccountIcon.vue
site/src/components/home/: WelcomeUser.vue
site/src/components/icon/: FernIcon.vue  LogoIcon.vue
site/src/components/navigation/: NavigationBar.vue  SideBar.vue
site/src/components/projects/info/: NotchTypes.ts  NotchValue.vue
site/src/components/projects/task/: TaskCard.vue  TaskColumn.vue
site/src/router/: index.ts
site/src/theme/: colours.scss  fonts.scss  global.scss  layout.scss
site/src/views/: HomeView.vue  ProjectsView.vue
site/styles/: colours.scss  fonts.scss  global.scss  layout.scss
site/types/: projects.ts  tasks.ts  user.ts  vue-smooth-dnd.d.ts
web/: package.json  pnpm-lock.yaml  tailwind.config.js
web/src/: app.css
web/src/api/: runtime.ts
web/src/api/models/: Audit.ts  AuthenticatedUser.ts  EditProject.ts  EditTask.ts  EditTaskGroup.ts  FullNotification.ts  FullTask.ts  Project.ts  ProjectBuilder.ts  Register.ts  SubTask.ts  Task.ts  TaskBuilder.ts  TaskGroupBuilder.ts  index.ts
web/src/components/icons/: anger.svelte  chewing.svelte  confused.svelte  grazing.svelte  head.svelte  jumping.svelte  sleeping.svelte  standing.svelte  trotting.svelte
web/src/components/layout/: container.svelte  header.svelte
web/src/components/task/: task.svelte
web/src/components/user/: avatar.svelte
web/src/lib/: constants.ts
web/src/lib/api/: user.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/auth/: +layout.svelte
web/src/stores/: token.ts
web/src/types/: notification.ts  tasks.ts  user.ts  utility.ts
web/src/utils/: date.ts
(+5 files in other folders)
