[package]
name = "backend"
version = "0.1.0"
authors = ["Rabbitminers <rabbitminers@zohomail.eu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sqlite"]
postgres = [ "sqlx/postgres"]
sqlite = [ "sqlx/sqlite"]

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [ "runtime-tokio", "macros", "migrate", "time", "chrono" ]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.uuid]
version = "1.4.1"
features = ["v4"]

[dependencies]
# Actix / Utoipa
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web-grants = "3.0.2"

utoipa = { version = "3.4.3", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version= "3.0.2", features = ["actix-web"] }

# Serde
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
serde_qs = "0.12.0"

# Misc
time = "0.3.23" # TODO: remove chrono deps
anyhow = "1.0.48"
futures = "0.3.28"
futures-util = "0.3.28"
nanoid = "0.4.0"
rand = "0.8.5"
color-eyre = "0.6.2"
tracing = "0.1.37"
bitflags = { version = "2.3.3", features = ["serde"] }
dotenv = "0.15.0"
thiserror = "1.0.38"
censor = "0.3.0"
jsonwebtoken = "8.3.0"
bcrypt = "0.15.0"