[package]
name = "backend"
version = "0.1.0"
authors = ["Rabbitminers <rabbitminers@zohomail.eu>"]
edition = "2021"

[features]
default = ["sqlite", "redoc"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
swagger = ["dep:utoipa-swagger-ui"]
rapidoc = ["dep:utoipa-rapidoc"]
redoc = ["dep:utoipa-redoc"]

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [ "runtime-tokio", "macros", "migrate", "time", "chrono" ]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.uuid]
version = "1.4.1"
features = ["v4"]

[dependencies]
# Axum / Utoipa
axum = { version = "0.6.20", features = ["tracing", "headers", "macros"] }
axum-extra = { version = "0.8.0", features = ["typed-routing"] }

tokio = { version = "1.29.1", features = ["full"] }

tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["trace", "cors", "auth", "add-extension", "util"] } 
tower-cookies = { version = "0.9.0", features = ["private", "signed"]} 

# Utoipa / API documentation front ends
utoipa = { version = "4.0.0", features = ["axum_extras", "chrono", "yaml"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"], optional = true }
utoipa-rapidoc = { version = "1.0.0", features = ["axum"], optional = true }
utoipa-redoc = { version = "1.0.0", features = ["axum"], optional = true }

# Serde
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
serde_qs = "0.12.0"

# Clap
clap = { version = "4.4.6", features = ["derive", "env"] } 

# Misc
time = "0.3.23" # TODO: remove chrono deps
convert_case = "0.6.0"
anyhow = "1.0.48"
futures = "0.3.28"
futures-util = "0.3.28"
nanoid = "0.4.0"
rand = "0.8.5"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
bitflags = { version = "2.3.3", features = ["serde"] }
dotenv = "0.15.0"
thiserror = "1.0.38"
censor = "0.3.0"
jsonwebtoken = "8.3.0"
bcrypt = "0.15.0"